# storage-service

./: .dockerignore  Dockerfile  LICENSE  README.md
.github/workflows/: deploy-storage.yml
app/: README.md  pyproject.toml  run.sh  setup.cfg
app/alembic/: env.py
app/alembic/versions/: fc8dab748a3d_initial.py
app/app/: main.py
app/app/api/v1/: api.py  files.py
app/app/core/: config.py  logger.py
app/app/infrastructure/db/: crud.py  database.py
app/app/infrastructure/redis/: redis.py
app/app/infrastructure/s3/: minio.py  minio_service.py
app/app/interfaces/: ifile_service.py
app/app/models/: db_file.py  file.py
app/app/schemas/: file.py
app/app/services/: dependencies.py
